# Triangles3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt
.github/workflows/: main.yml  md_style_check.yml
ci/profiles/: clang_debug.profile  clang_release.profile  gcc_debug.profile
ci/profiles/ubuntu-22.04/: clang_debug.profile  clang_release.profile  gcc_debug.profile  gcc_release.profile
driver/: CMakeLists.txt  main.cc
driver/include/driver/: cmd_parser.hh  config.hh  triangles_gl.hh
driver/src/: cmd_parser.cc  main.cc
driver/src/shaders/: shadow_map.vert  triangles.frag  triangles.vert
geometry/: CMakeLists.txt  intersection.hh  line3d.hh  numeric.hh  octree.hh  plane.hh  triangle3d.hh  vector3d.hh
geometry/include/geom/: comparator.hh  line3d.hh  numeric.hh  octree.hh  plane.hh  range3d.hh  segment3d.hh  triangle3d.hh  vector3d.hh
glhpp/: CMakeLists.txt
glhpp/include/glhpp/: error.hh  gl.hh  gl_assert.hh  light.hh  program.hh  renderer.hh  shader.hh  shadow_map.hh  texture.hh  vertex.hh  vertex_array.hh
glhpp/include/glhpp/detail/: error_handler.hh  gl_handle.hh  object_deleter.hh  unique_id.hh
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  geometry_tests.cc
tests/e2e/: CMakeLists.txt  generate.py  generator.cc  run_tests.py
tests/e2e/ans/: ans_0.out  ans_1.out  ans_2.out  ans_3.out  ans_4.out  ans_5.out  ans_6.out  ans_7.out  ans_8.out  ans_9.out
tests/e2e/bench/: benchmark.sh
tests/e2e/bench/ans/: ans_0.out
tests/e2e/func/ans/: ans_0.out  ans_2.out  ans_4.out  ans_5.out  ans_7.out
tests/e2e/func/input/: test_0.in  test_1.in  test_3.in  test_5.in
tests/e2e/input/: test_0.in  test_1.in  test_2.in  test_3.in  test_4.in  test_5.in  test_6.in  test_7.in  test_8.in  test_9.in
tests/unit/: CMakeLists.txt  geometry_tests.cc
triangles_gl/: CMakeLists.txt
triangles_gl/include/triangles_gl/: camera.hh  renderer.hh  scene.hh  vertex.hh  viewport.hh  window.hh
triangles_gl/src/: window.cc
